[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/World/buttone.png" type="Texture" id=1]
[ext_resource path="res://Scripts/World/SpecialButtons.gd" type="Script" id=2]
[ext_resource path="res://assets/World/pin.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[node name="point8" type="TextureButton" groups=["points"]]
margin_left = -29.0
margin_top = -29.0
margin_right = 29.0
margin_bottom = 29.0
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )
unreachable_point = [ "" ]
adjacent_points = [ "", "" ]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 29, 29 )
shape = SubResource( 1 )

[node name="pinButton" type="TextureButton" parent="."]
margin_left = 51.0
margin_top = -18.0
margin_right = 162.0
margin_bottom = 28.0
texture_normal = ExtResource( 3 )

[node name="statusLabel" type="Label" parent="."]
margin_left = 63.0
margin_top = 12.0
margin_right = 139.0
margin_bottom = 26.0
text = "untraversed"

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="pressed" from="pinButton" to="." method="_on_pinButton_pressed"]
